// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage Component should match snapshot when user is logged in and 'from' is available in the location 1`] = `
<Redirect
  push={false}
  to="/"
/>
`;

exports[`HomePage Component should match snapshot when user is logged in and there is no 'from' is available in the location 1`] = `
<React.Fragment>
  <Connect(Header) />
  <section
    className="content home-content"
  >
    <h1>
      This website will give statistics about repos which are hosted on Github
    </h1>
    <Link
      className="btn btn-social btn-github"
      replace={false}
      to="/search"
    >
      <span
        className="fa fa-github"
      />
      Go to Search Page
    </Link>
  </section>
</React.Fragment>
`;

exports[`HomePage Component should match snapshot when user is not logged in 1`] = `
<React.Fragment>
  <Connect(Header) />
  <section
    className="content home-content"
  >
    <h1>
      This website will give statistics about repos which are hosted on Github
    </h1>
    <a
      className="btn btn-social btn-github"
      href="/auth/github"
    >
      <span
        className="fa fa-github"
      />
       Sign in with Github
    </a>
  </section>
</React.Fragment>
`;
